--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,7 @@
+<!-- before refactoring -->
+
+
+<!-- after refactoring -->
 <% @posts.each do |post| %>
   <div><%= link_to post.title, post_path(post) %></div>
 <% end %>
